--- a/index.html
+++ b/index.html
@@ -94,7 +94,43 @@
             }
         }
 
-       
+        /* Tablets (768px to 1024px) */
+        @media (min-width: 768px) and (max-width: 1024px) {
+            .sidebar {
+                width: 200px;
+            }
+
+            .content {
+                margin-left: 210px;
+            }
+
+            .section h1 {
+                font-size: 28px;
+            }
+
+            .section {
+                font-size: 15px;
+            }
+        }
+
+        /* Desktops (1025px and up) */
+        @media (min-width: 1025px) {
+            .sidebar {
+                width: 280px;
+            }
+
+            .content {
+                margin-left: 290px;
+            }
+
+            .section h1 {
+                font-size: 32px;
+            }
+
+            .section {
+                font-size: 16px;
+            }
+        }
     </style>
 </head>
 
