Contact us Dummy Content Added

--- a/index.html
+++ b/index.html
@@ -223,7 +223,23 @@
             <div id="contact-us" class="section">
                 <h1>Contact Us</h1>
 
-                <p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis esse distinctio harum nulla!
+                    Aspernatur assumenda illum ea ipsum, delectus deleniti deserunt eum quae dolores fugit quisquam
+                    provident natus repellendus distinctio quos, praesentium perferendis numquam expedita temporibus
+                    dolorem inventore? Incidunt voluptate enim perferendis nihil aspernatur ipsa rerum exercitationem
+                    laudantium culpa, nemo suscipit id voluptatem officia non cumque laboriosam nesciunt neque aperiam
+                    accusamus? Cupiditate, doloremque quia? Perspiciatis laudantium molestias voluptate iure odit sequi
+                    eaque ipsa minus officia eveniet debitis consequuntur rem doloribus culpa, perferendis sint
+                    molestiae optio. Dolorem eligendi dignissimos perspiciatis aliquam voluptatem distinctio dolore
+                    veritatis aliquid. Libero neque officiis accusamus unde tempora distinctio quas nostrum animi soluta
+                    error qui nam quisquam, ipsa, facere nesciunt perspiciatis? Sit quasi repellat nisi numquam modi
+                    expedita, asperiores laborum veritatis alias provident accusantium similique nulla quibusdam rerum
+                    illum. Deleniti cumque pariatur eaque nihil nesciunt molestias exercitationem cum, illum alias
+                    ratione animi harum architecto doloribus eligendi impedit, consequatur mollitia voluptatem maiores
+                    aliquid ab, unde earum quisquam itaque. Sapiente reprehenderit, veniam mollitia neque nisi amet
+                    facilis ducimus dolorem aperiam qui aut, nobis harum assumenda molestiae ipsa quasi repellendus
+                    laboriosam eius magnam, exercitationem quae temporibus. Reiciendis eveniet aut quae, quas, ad
+                    perspiciatis doloribus vel deserunt sapiente alias autem exercitationem.</p>
                 <h3>(Here is dummy contact us information)</h3><br><br>
                 <hr>
 
