--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sidebar Design</title>
     <style>
         .body {
-            font-family: Arial, sans-serif;
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             margin: 0;
         }
 
