--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         .body {
             font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
         .slidebar-container {
